<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="RegulationParameters" Id="{0674d71a-1722-4284-9bff-8b15a47048b6}">
    <Declaration><![CDATA[TYPE RegulationParameters :
STRUCT
	Control: RegulationControlParameters;
	//SupplyAir: AirParameters := (StartupFanSpeed := 0.3, SetPointAdjustment := (Curve := (Y1 := 165, Y2 := 165, Y3 := 165, Y4 := 165, Y5 := 165, Y6 := 165, Y7 := 165, Y8 := 165, Y9 := 165)));
	//ExtractAir: AirParameters := (StartupFanSpeed := 0.4, SetPointAdjustment := (Curve := (Y1 := 160, Y2 := 160, Y3 := 160, Y4 := 160, Y5 := 160, Y6 := 160, Y7 := 160, Y8 := 160, Y9 := 160)));
	SupplyAir: AirParameters := (StartupFanSpeed := 0.3);
	ExtractAir: AirParameters := (StartupFanSpeed := 0.4);
	Temperature: TemperatureControlParameters;
	NightCoolingLimit: LREAL;
	NightCoolingRequest: BOOL;
	NightCooling: BOOL;
	TemperatureCompensationSource: TemperatureCompensationSources;
	CurrentTemperatureCompensationSource: TemperatureCompensationSources;
	CompensationTemperature: LREAL;
	SystemSpecificFanPower: LREAL; // $(unit "kPa")
	SystemEfficiency: LREAL; // $(scale "0 1 0 100", unit "%")
	ApplyAbsoluteSetPointCurves: word; // $(skip)
	LastApplyAbsoluteSetPointCurves: WORD; // $(skip)
	SaveDefaults: BOOL := TRUE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>