<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="TemperatureControlParametersFB" Id="{354b90fc-0e79-491e-b97a-00aae56e722e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK TemperatureControlParametersFB
VAR_IN_OUT
	Parameters: GreenMasterBaseParameters;
	ParametersFB: GreenMasterBaseParametersFB;
	Temperature: TemperatureControlParameters;
END_VAR
VAR_INPUT
END_VAR
VAR_OUTPUT
	SetPointAdjustmentFB: SetPointAdjustmentFB;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SetPointAdjustmentFB(X := Parameters.Regulation.CompensationTemperature, SetPointAdjustment := Parameters.Regulation.Temperature.SetPointAdjustment);
Parameters.Regulation.Temperature.Control.CSP := MAX(Parameters.Regulation.Temperature.Control.SP + Temperature.SetPointAdjustment.Y, 4);
IF (Main.GreenMaster.GetState() = SystemStates.Run) AND (Main.GreenMaster.StateTime() > LTIME#1M) THEN
	Parameters.Regulation.Temperature.Efficiency := CalculateEfficiency(Parameters.IO.AIn.T_BT3, Parameters.IO.AIn.T_BT2, Parameters.IO.AIn.F_BT1);
	IF ((Parameters.IO.AOut.F_QN1 < 0.001) AND (Parameters.Regulation.Temperature.HeaterOutputDirection = HeaterOutputDirections.DecreaseToHeat)) OR
		((Parameters.IO.AOut.F_QN1 > 0.999) AND (Parameters.Regulation.Temperature.HeaterOutputDirection = HeaterOutputDirections.IncreaseToHeat)) THEN
		Parameters.Alarm.Status.B.HeatExchangerEfficiency := Parameters.Regulation.Temperature.Efficiency < Parameters.Alarm.Limits.B.HeatExchangerEfficiency;
	ELSE
		Parameters.Alarm.Status.B.HeatExchangerEfficiency := FALSE;
	END_IF
ELSE
	Parameters.Regulation.Temperature.Efficiency := 0;	
	Parameters.Alarm.Status.B.HeatExchangerEfficiency := FALSE;
END_IF
]]></ST>
    </Implementation>
    <Method Name="MaxOutput" Id="{4400b954-ec81-45b5-a67c-5966ca43201c}">
      <Declaration><![CDATA[METHOD MaxOutput : LREAL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF Temperature.HeaterOutputDirection = HeaterOutputDirections.IncreaseToHeat THEN
	MaxOutput := 1;
ELSE
	MaxOutput := 0;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="MinOutput" Id="{cd59ac2d-a900-43e3-8226-cf487caa82ae}">
      <Declaration><![CDATA[METHOD MinOutput : LREAL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF Temperature.HeaterOutputDirection = HeaterOutputDirections.IncreaseToHeat THEN
	MinOutput := 0;
ELSE
	MinOutput := 1;
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>